Fixed waves on HP

--- a/personalWeb/templates/index.html
+++ b/personalWeb/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Scott Frazier</title>
+    <title>Welcome!</title>
     <!--------------------------->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -19,19 +19,18 @@
 <body>
 
     <section>
-        <div style="background-image: url('ImageLocation');background-size: cover; height: 500px; padding-top:80px; padding-left: 60px;">
-            <img src="static\images\scott.jpg" style="height: 435px; width: 225px; border-radius: 8%; border: 6px solid #ffffff;">
+        <div style="background-size: cover; height: 455px; width: 275px; padding-top:80px; margin: auto;">
+            <img src="static\images\scott.jpg" style="height: 455px; width: 275px; border-radius: 2%; border: 5px solid #ffffff;">
         </div>
 
-
-        <div class="wave " id="wave1 " style="--i:1; "></div>
-        <div class="wave " id="wave2 " style="--i:2; "></div>
-        <div class="wave " id="wave3 " style="--i:3; "></div>
-        <div class="wave " id="wave4 " style="--i:4; "></div>
+        <div class="wave" id="wave1" style="--i:1;"></div>
+        <div class="wave" id="wave2" style="--i:2;"></div>
+        <div class="wave" id="wave3" style="--i:3;"></div>
+        <div class="wave" id="wave4" style="--i:4;"></div>
     </section>
 
-    <div class="sec ">
-        <h2>Watery Waves</h2>
+    <div class="sec">
+        <h2>🌴<u>About Me</u>🌴</h2>
         <p>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design
             adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next
             high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum
