--- a/personalWeb/templates/index.html
+++ b/personalWeb/templates/index.html
@@ -19,8 +19,30 @@
 <body>
 
     <section>
-        <div style="background-size: cover; height: 455px; width: 275px; padding-top:80px; margin: auto;">
-            <img src="static\images\scott.jpg" style="height: 455px; width: 275px; border-radius: 2%; border: 5px solid #ffffff;">
+        <div id="background-wrap">
+            <div class="x1">
+                <div class="cloud"></div>
+            </div>
+
+            <div class="x2">
+                <div class="cloud"></div>
+            </div>
+
+            <div class="x3">
+                <div class="cloud"></div>
+            </div>
+
+            <div class="x4">
+                <div class="cloud"></div>
+            </div>
+
+            <div class="x5">
+                <div class="cloud"></div>
+            </div>
+        </div>
+
+        <div style=" background-size: cover; height: 455px; width: 275px; padding-top:80px; margin: auto; ">
+            <img src="static\images\scott.jpg" style="height: 455px; width: 275px; border-radius: 2%; border: 5px solid #ffffff; ">
         </div>
 
         <div class="wave" id="wave1" style="--i:1;"></div>
@@ -30,17 +52,20 @@
     </section>
 
     <div class="sec">
-        <h2>🌴<u>About Me</u>🌴</h2>
-        <p>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design
-            adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next
-            high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum
-            for your next high seas design adventure.<br><br>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt
-            for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the
-            plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional
-            Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.<br><br>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties!
+        <h2>🌴About Me🌴</h2>
+        <p>Having graduated from the University of Texas at Dallas's Criminology program in May 2020, Scott Frazier has garnered many skills that revolve around the analysis, and manipulation of data. Arrr me hearties! Make traditional Latin walk the plank
+            and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin
+            walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional
+            Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.<br><br>Arrr me hearties!
             Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr
             me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design
-            adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.<br><br></p>
+            adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next
+            high seas design adventure.
+            <br><br>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high
+            seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for
+            your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate
+            lorem ipsum for your next high seas design adventure.
+            <br><br></p>
     </div>
 
     <script>
