--- a/personalWeb/static/css/style.css
+++ b/personalWeb/static/css/style.css
@@ -11,6 +11,7 @@ section {
     width: 100%;
     height: 100vh;
     background: #3586ff;
+    z-index: 950;
 }
 
 .wave {
@@ -74,7 +75,7 @@ section {
 }
 
 body::-webkit-scrollbar {
-    width: 0.4rem;
+    width: 0.5rem;
 }
 
 body::-webkit-scrollbar-track {
@@ -86,7 +87,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-/******/
+/***CLOUDS***/
 
 #background-wrap {
     bottom: 0;
@@ -95,7 +96,6 @@ body::-webkit-scrollbar-thumb {
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 1;
 }
 
 
@@ -159,7 +159,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-/* OBJECTS */
+/* CLOUDS - OBJECTS */
 
 .cloud {
     background: #fff;
@@ -209,4 +209,46 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-/*profile*/
+/***SUN***/
+
+.shadow {
+    position: relative;
+    margin: auto 0;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    background: linear-gradient(rgb(255, 196, 0), #ff9900);
+    top: 2%;
+    left: 2%;
+}
+
+.shadow:before,
+.shadow:after {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    border-radius: 50%;
+    background: linear-gradient(45deg, orange, yellow);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    background-size: 400%;
+    z-index: -1;
+    animation: shadow 20s linear infinite;
+}
+
+@keyframes shadow {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.shadow:after {
+    filter: blur(20px);
+}
