--- a/personalWeb/templates/index.html
+++ b/personalWeb/templates/index.html
@@ -19,53 +19,68 @@
 <body>
 
     <section>
+        <div class="shadow"></div>
+
         <div id="background-wrap">
             <div class="x1">
-                <div class="cloud"></div>
+                <div class="cloud">
+                </div>
+                <h1 style="color: #ffffff; text-align: center; font-size: 110px">Welcome</h1>
+
             </div>
 
-            <div class="x2">
-                <div class="cloud"></div>
+            <div class=" x2 ">
+                <div class="cloud "></div>
+                <h1 style="color: #ffffff; text-align: center; font-size: 110px; ">to my</h1>
             </div>
 
-            <div class="x3">
-                <div class="cloud"></div>
+            <div class="x3 ">
+                <div class="cloud "></div>
+                <h1 style="color: #ffffff; text-align: center; font-size: 110px ">personal</h1>
             </div>
 
-            <div class="x4">
-                <div class="cloud"></div>
+            <div class="x4 ">
+                <div class="cloud "></div>
+                <h1 style="color: #ffffff; text-align: center; font-size: 110px ">webpage!</h1>
             </div>
 
-            <div class="x5">
-                <div class="cloud"></div>
+            <div class="x5 ">
+                <div class="cloud "></div>
             </div>
         </div>
 
-        <div style=" background-size: cover; height: 455px; width: 275px; padding-top:80px; margin: auto; ">
-            <img src="static\images\scott.jpg" style="height: 455px; width: 275px; border-radius: 2%; border: 5px solid #ffffff; ">
-        </div>
 
-        <div class="wave" id="wave1" style="--i:1;"></div>
-        <div class="wave" id="wave2" style="--i:2;"></div>
-        <div class="wave" id="wave3" style="--i:3;"></div>
-        <div class="wave" id="wave4" style="--i:4;"></div>
+
+        <div class="wave " id="wave1 " style="--i:1; "></div>
+        <div class="wave " id="wave2 " style="--i:2; "></div>
+        <div class="wave " id="wave3 " style="--i:3; "></div>
+        <div class="wave " id="wave4 " style="--i:4; "></div>
     </section>
 
-    <div class="sec">
-        <h2>🌴About Me🌴</h2>
-        <p>Having graduated from the University of Texas at Dallas's Criminology program in May 2020, Scott Frazier has garnered many skills that revolve around the analysis, and manipulation of data. Arrr me hearties! Make traditional Latin walk the plank
-            and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin
-            walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional
-            Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.<br><br>Arrr me hearties!
-            Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr
-            me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design
-            adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next
-            high seas design adventure.
-            <br><br>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high
-            seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for
-            your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate
-            lorem ipsum for your next high seas design adventure.
-            <br><br></p>
+    <div class="row ">
+        <div class="col-md-10 ">
+            <div class="sec ">
+                <h2>🌴About Me🌴</h2>
+                <p>Having graduated from the University of Texas at Dallas's Criminology program in May 2020, Scott Frazier has garnered many skills that revolve around the analysis, and manipulation of data. Arrr me hearties! Make traditional Latin walk
+                    the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make
+                    traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr
+                    me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas
+                    design adventure.<br><br>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem
+                    ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank
+                    and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional
+                    Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.
+                    <br><br>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your
+                    next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate
+                    lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the
+                    plank and opt for pirate lorem ipsum for your next high seas design adventure.
+                    <br><br></p>
+            </div>
+        </div>
+        <div class="col-md-2 ">
+            <div style=" background-size: cover; height: 455px; width: 275px; margin: auto; padding-bottom: 50%; ">
+                <img src="static\images\scott.jpg " style="height: 455px; width: 275px; border-radius: 2%; border: 5px solid #3586ff; ">
+            </div>
+        </div>
     </div>
 
     <script>
