--- a/personalWeb/static/css/style.css
+++ b/personalWeb/static/css/style.css
@@ -79,7 +79,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-    background: #1e1e24;
+    background: #3586ff;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -251,4 +251,49 @@ body::-webkit-scrollbar-thumb {
 
 .shadow:after {
     filter: blur(20px);
+}
+
+/* hr */
+
+#hr1{
+    border: 4px solid #3586ff;
+    border-radius: 5px;}
+
+/* table */
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table thead tr {
+    background-color: #3586ff;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #3586ff;
+}
+
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #3586ff;
 }
