--- a/personalWeb/templates/index.html
+++ b/personalWeb/templates/index.html
@@ -49,8 +49,6 @@
             </div>
         </div>
 
-
-
         <div class="wave" id="wave1" style="--i:1;"></div>
         <div class="wave" id="wave2" style="--i:2;"></div>
         <div class="wave" id="wave3" style=" --i:3;"></div>
@@ -61,18 +59,59 @@
         <div class="col-md-10 ">
             <div class="sec ">
                 <h2>🌴About Me🌴</h2>
-                <p>Having graduated from the University of Texas at Dallas's Criminology program in May 2020, Scott Frazier has garnered many skills that revolve around the analysis, and manipulation of data. Arrr me hearties! Make traditional Latin walk
-                    the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make
-                    traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr
-                    me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas
-                    design adventure.<br><br>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem
-                    ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank
-                    and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional
-                    Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.
-                    <br><br>Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your
-                    next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate
-                    lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the plank and opt for pirate lorem ipsum for your next high seas design adventure.Arrr me hearties! Make traditional Latin walk the
-                    plank and opt for pirate lorem ipsum for your next high seas design adventure.
+                <hr id="hr1">
+                <p>Having graduated from the University of Texas at Dallas's Criminology program in May 2020, Scott Frazier has garnered many skills that revolve around the analysis, and manipulation of data. With the job market becoming very competitive after the COVID-19 outbreak, 
+                    Scott Frazier decided it was time to acquire marketable skills to broaden his potential job opportunities. After doing some research, he decided to focus on an entirely new skill-set, which ultimately ended up being data science. 
+                    In September of 2020, he enrolled in the Data Science Bootcamp at Southern Methodist University; where he learned how to gather, manipulate, and present large quantities of data. To accomplish this, he learned how to use a variety of different technologies and technologies that are used heavily in the data science industry today. See the table below to get a quick glimpse at the tools that Scott uses!<br><br>
+                    <br>
+                    <table class="styled-table">
+                        <thead>
+                            <tr>
+                                <th><b>Technology/ Concept:</b></th>
+                                <th>Python *</th>
+                                <th>SQL *</th>
+                                <th>JavaScript *</th>
+                                <th>Pandas</th>
+                                <th>Matplotlib</th>
+                                <th>HTML/ CSS</th>
+                                <th>Tableau</th>
+                                <th></th>
+                                <th>SQL</th>
+                                <th>SQL</th>
+                                <th>SQL</th>
+                                <th>SQL</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><b>Learning since:</b></td>
+                                <td>10/2020</td>
+                                <td>11/2020</td>
+                                <td>01/2021</td>
+                                <td>10/2020</td>
+                                <td>10/2020</td>
+                                <td>05/2020</td>
+                                <td>02/2021</td>
+                                <td>10/2020</td>   
+                                <td>10/2020</td>
+                                <td>10/2020</td>
+                            </tr>
+                            <tr class="active-row">
+                                <td><b>Proficiency Level:</b></td>
+                                <td>Upper-Intermediate</td>
+                                <td>Upper-Intermediate</td>
+                                <td>Upper-Intermediate</td>
+                                <td>Upper-Intermediate</td>
+                                <td>Upper-Intermediate</td>
+                                <td>Intermediate</td>
+                                <td>Intermediate</td>
+                                <td>Intermediate</td>
+                                <td>Intermediate</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p>* = Preferred primary programming languages</p>
+
                     <br><br></p>
             </div>
         </div>
