--- a/personalWeb/templates/index.html
+++ b/personalWeb/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Welcome!</title>
+    <title>About Me - Scott Frazier</title>
     <!--------------------------->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -62,7 +62,8 @@
                 <hr id="hr1">
                 <p>Having graduated from the University of Texas at Dallas's Criminology program in May 2020, Scott Frazier has garnered many skills that revolve around the analysis, and manipulation of data. With the job market becoming very competitive after the COVID-19 outbreak, 
                     Scott Frazier decided it was time to acquire marketable skills to broaden his potential job opportunities. After doing some research, he decided to focus on an entirely new skill-set, which ultimately ended up being data science. 
-                    In September of 2020, he enrolled in the Data Science Bootcamp at Southern Methodist University; where he learned how to gather, manipulate, and present large quantities of data. To accomplish this, he learned how to use a variety of different technologies and technologies that are used heavily in the data science industry today. See the table below to get a quick glimpse at the tools that Scott uses!<br><br>
+                    In September of 2020, he enrolled in the Data Science Bootcamp at Southern Methodist University; where he learned how to gather, manipulate, and present large quantities of data. To accomplish this, he learned how to use a variety of different technologies and 
+                    technologies that are used heavily in the data science industry today. See the table below to get a quick glimpse at the tools that Scott uses!</p>
                     <br>
                     <table class="styled-table">
                         <thead>
@@ -75,11 +76,14 @@
                                 <th>Matplotlib</th>
                                 <th>HTML/ CSS</th>
                                 <th>Tableau</th>
-                                <th></th>
-                                <th>SQL</th>
-                                <th>SQL</th>
-                                <th>SQL</th>
-                                <th>SQL</th>
+                                <th>Web Data (API Requests)</th>
+                                <th>ETL</th>
+                                <th>D3.js</th>
+                                <th>Geomapping (Leaflet.js)</th>
+                                <th>R</th>
+                                <th>Machine Learning</th>
+                                <th>Big Data</th>
+                                <th>Hadoop & Spark</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -93,8 +97,13 @@
                                 <td>05/2020</td>
                                 <td>02/2021</td>
                                 <td>10/2020</td>   
-                                <td>10/2020</td>
-                                <td>10/2020</td>
+                                <td>10/2020</td>   
+                                <td>10/2020</td>   
+                                <td>12/2020</td>
+                                <td>01/2021</td>
+                                <td>03/2021</td>
+                                <td>03/2021</td>
+                                <td>03/2021</td>
                             </tr>
                             <tr class="active-row">
                                 <td><b>Proficiency Level:</b></td>
@@ -107,17 +116,22 @@
                                 <td>Intermediate</td>
                                 <td>Intermediate</td>
                                 <td>Intermediate</td>
+                                <td>Intermediate</td>
+                                <td>Intermediate</td>
+                                <td>Intermediate</td>
+                                <td>Intermediate</td>
+                                <td>Intermediate</td>
+                                <td>Intermediate</td>
                             </tr>
                         </tbody>
                     </table>
                     <p>* = Preferred primary programming languages</p>
-
-                    <br><br></p>
-            </div>
+                    <br>
+                </div>
         </div>
-        <div class="col-md-2 ">
-            <div style=" background-size: cover; height: 455px; width: 275px; margin: auto; padding-bottom: 50%; ">
-                <img src="static\images\scott.jpg " style="height: 455px; width: 275px; border-radius: 2%; border: 5px solid #3586ff; ">
+        <div class="col-md-2">
+            <div style=" background-size: cover; height: 455px; width: 275px; margin: auto; padding-top: 25%; ">
+                <img src="static\images\scott.jpg " style="height: 520px; width: 275px; border-radius: 5%; border: 5px solid #3586ff; ">
             </div>
         </div>
     </div>
