--- a/personalWeb/templates/index.html
+++ b/personalWeb/templates/index.html
@@ -41,7 +41,7 @@
 
             <div class="x4 ">
                 <div class="cloud "></div>
-                <h1 style="color: #ffffff; text-align: center; font-size: 110px ">webpage!</h1>
+                <h1 style="color: #ffffff; text-align: center; font-size: 110px ">dashboard!</h1>
             </div>
 
             <div class="x5 ">
@@ -62,8 +62,7 @@
                 <hr id="hr1">
                 <p>Having graduated from the University of Texas at Dallas's Criminology program in May 2020, Scott Frazier has garnered many skills that revolve around the analysis, and manipulation of data. With the job market becoming very competitive after the COVID-19 outbreak, 
                     Scott Frazier decided it was time to acquire marketable skills to broaden his potential job opportunities. After doing some research, he decided to focus on an entirely new skill-set, which ultimately ended up being data science. 
-                    In September of 2020, he enrolled in the Data Science Bootcamp at Southern Methodist University; where he learned how to gather, manipulate, and present large quantities of data. To accomplish this, he learned how to use a variety of different technologies and 
-                    technologies that are used heavily in the data science industry today. See the table below to get a quick glimpse at the tools that Scott uses!</p>
+                    In September of 2020, he enrolled in the Data Science Bootcamp at Southern Methodist University; where he learned how to gather, manipulate, and present large quantities of data. To accomplish this, he learned how to use a variety of different technologies that are used heavily in the data science industry today. See the table below to get a quick glimpse at the tools that Scott uses!</p>
                     <br>
                     <table class="styled-table">
                         <thead>
@@ -88,7 +87,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><b>Learning since:</b></td>
+                                <td><b>Learning Since:</b></td>
                                 <td>10/2020</td>
                                 <td>11/2020</td>
                                 <td>01/2021</td>
@@ -98,9 +97,9 @@
                                 <td>02/2021</td>
                                 <td>10/2020</td>   
                                 <td>10/2020</td>   
-                                <td>10/2020</td>   
-                                <td>12/2020</td>
-                                <td>01/2021</td>
+                                <td>01/2020</td>   
+                                <td>01/2020</td>
+                                <td>02/2021</td>
                                 <td>03/2021</td>
                                 <td>03/2021</td>
                                 <td>03/2021</td>
@@ -127,6 +126,7 @@
                     </table>
                     <p>* = Preferred primary programming languages</p>
                     <br>
+                    <h4>For a comprehensive list of the tools/ technologies that I use to accomplish my data-related tasks, visit my <a href="https://www.linkedin.com/in/scott-frazier-7812031a1/">LinkedIn</a> page!</h4>
                 </div>
         </div>
         <div class="col-md-2">
