--- a/SMU_Vizz_Portfolio/Web/style.css
+++ b/SMU_Vizz_Portfolio/Web/style.css
@@ -26,6 +26,7 @@ p{
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    border-radius: 15px;
 }
 
 #nav-next{
@@ -34,7 +35,8 @@ p{
 }
 
 #nav-next:hover {
-    background-color: #111;
+    background-color: white;
+    border-radius: 15px;
 }
 
 #ul-a{
@@ -43,6 +45,66 @@ p{
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+}
+
+#ul-a:hover{
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+    
+}
+
+.dropdown .dropbtn {
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+    font-size: inherit;
+    font-weight: bold;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    transition: all 2s ease-in-out;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    transform: scale(1.1);
+    background-color: #333;
+    color: white;
+    border-radius: 15px;
+
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 #sfpic{
@@ -121,6 +183,8 @@ th {
     padding: 70px 0;
     text-align: center;    
 }
+
+
 
 #svgsm{
     display: block;
