--- a/SMU_Vizz_Portfolio/Web/style.css
+++ b/SMU_Vizz_Portfolio/Web/style.css
@@ -14,6 +14,7 @@ body {
     margin: auto;
     width: 75%;
     padding: 10px;
+    text-align: center;
 }
 
 p{
@@ -53,12 +54,12 @@ p{
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+
 }
 
 .dropdown {
     float: left;
     overflow: hidden;
-    
 }
 
 .dropdown .dropbtn {
@@ -71,6 +72,13 @@ p{
     margin: 0;
     font-size: inherit;
     font-weight: bold;
+    
+}
+
+.dropdown .dropbtn:hover {
+    background-color: white;
+    color: black;
+    border-radius: 15px 15px 0px 0px;
 }
 
 /* Dropdown content (hidden by default) */
@@ -79,9 +87,9 @@ p{
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    transition: all 2s ease-in-out;
+    border-radius: 0px 5px 5px 5px;
+    box-shadow: 2px 2px 10px black;
 }
 
 /* Links inside the dropdown */
@@ -95,10 +103,11 @@ p{
 }
 
 .dropdown-content a:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
     background-color: #333;
     color: white;
     border-radius: 15px;
+    transition: all .35s ease-in-out;
 
 }
 
@@ -184,8 +193,6 @@ th {
     text-align: center;    
 }
 
-
-
 #svgsm{
     display: block;
     margin: auto;
@@ -199,7 +206,7 @@ th {
 
 #d3-container{
     outline: 3px solid;
-    border-radius: 1%;
+    border-radius: 15px;
     color: white;
 }
 
