Cleaning up folders and files

--- a/SMU_Vizz_Portfolio/Web/templates/D3.html
+++ b/SMU_Vizz_Portfolio/Web/templates/D3.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Scott Frazier - Home</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Scott Frazier - D3</title>
+        <link rel="stylesheet" href="/Web/visuals/style.css">
+        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="/Web/js/app.js" defer></script>
         <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
     </head>
     <body>
@@ -26,11 +28,10 @@
             </div>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
-        <h2 id="h2welcome">Welcome!</h2><img id="sfpic" src="Resources/cropped.png">
-        <p>This webpage was created to showcase the many tools that I have learned over the years relating to data science. Please feel free to browse around and enjoy the webpage! Thank you for visiting!</p>
-        <hr id="hr1">
-        <p>The experience tab is where you may view some of the tools I have been using over the years, as well as what I feel my proficiency is in each tool, and how long I have been using them!</p>
-        <p>The about tab is where you may read a bit about me, as well as links to my social media pages!</p>
+        <br>
+        <h2 class="h2d3">D3 - Recreation</h2>
+        <p>Using D3 to recreate a previous visualization using only 2D shapes.</p>
+        <svg width="1000" height="485" id = "svgsm"></svg>
        
     </body>
 </html>
