--- a/SMU_Vizz_Portfolio/Web/templates/D3Vizz.html
+++ b/SMU_Vizz_Portfolio/Web/templates/D3Vizz.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Scott Frazier - JS</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Scott Frazier - D3Visuals</title>
+        <link rel="stylesheet" href="/Web/visuals/style.css">
+        <script src="https://d3js.org/d3.v7.min.js"></script>
         <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
     </head>
     <body>
@@ -26,7 +27,24 @@
             </div>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
-        <canvas id="myCanvas" width="750" height="750"></canvas>
-        <script src="script.js"></script>
+        <h2 class="h2d3"></h2>
+        <p style="text-align: right;">Using D3 to create visualizations using movie data.</p>
+        <br>
+        <div id="d3-container">
+            <p style="text-align: center; padding-top: 10px; font-size: 26px;">Financial Gross (SUM) by Year</p>
+            <style>.rectangle:hover{opacity: 0.66}</style>
+            <svg id="svgbar"></svg>
+        </div>
+        <script src="/Web/js/app2.js"></script>
+        <br>
+        <hr id="hr1">
+        <br>
+        <div id="pie">
+            <p style="text-align: center; padding-top: 10px; font-size: 26px;">Financial Gross (SUM) by Genre</p>
+            <svg id="svgpie" width="1000" height="500"></svg>
+        </div>
+        <script src="/Web/js/app3.js"></script>
+
+       
     </body>
 </html>
