--- a/SMU_Vizz_Portfolio/Web/templates/JS.html
+++ b/SMU_Vizz_Portfolio/Web/templates/JS.html
@@ -2,10 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Scott Frazier - D3</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="https://d3js.org/d3.v7.min.js"></script>
-        <script src="app.js" defer></script>
+        <title>Scott Frazier - JS</title>
+        <link rel="stylesheet" href="/Web/visuals/style.css">
         <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
     </head>
     <body>
@@ -28,10 +26,7 @@
             </div>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
-        <br>
-        <h2 class="h2d3">D3 - Recreation</h2>
-        <p>Using D3 to recreate a previous visualization using only 2D shapes.</p>
-        <svg width="1000" height="485" id = "svgsm"></svg>
-       
+        <canvas id="myCanvas" width="750" height="750"></canvas>
+        <script src="/Web/js/script.js"></script>
     </body>
 </html>
