--- a/SMU_Vizz_Portfolio/Web/templates/P5.html
+++ b/SMU_Vizz_Portfolio/Web/templates/P5.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Scott Frazier - D3Visuals</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <title>Scott Frazier - p5</title>
+        <script src="/Web/js/p5.js"></script>
+        <link rel="stylesheet" href="/Web/visuals/style.css">
         <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
     </head>
     <body>
@@ -27,24 +27,11 @@
             </div>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
-        <h2 class="h2d3"></h2>
-        <p style="text-align: right;">Using D3 to create visualizations using movie data.</p>
         <br>
-        <div id="d3-container">
-            <p style="text-align: center; padding-top: 10px; font-size: 26px;">Financial Gross (SUM) by Year</p>
-            <style>.rectangle:hover{opacity: 0.66}</style>
-            <svg id="svgbar"></svg>
-        </div>
-        <script src="app2.js"></script>
-        <br>
-        <hr id="hr1">
-        <br>
-        <div id="pie">
-            <p style="text-align: center; padding-top: 10px; font-size: 26px;">Financial Gross (SUM) by Genre</p>
-            <svg id="svgpie" width="1000" height="500"></svg>
-        </div>
-        <script src="app3.js"></script>
 
-       
+        <div id="myCanvas2">
+        <script src="/Web/js/sketch.js"></script>
+
+        </div>
     </body>
 </html>
