--- a/SMU_Vizz_Portfolio/Web/templates/experience.html
+++ b/SMU_Vizz_Portfolio/Web/templates/experience.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - Experience</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/Web/visuals/style.css">
         <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
     </head>
     <body>
