--- a/SMU_Vizz_Portfolio/Web/templates/index.html
+++ b/SMU_Vizz_Portfolio/Web/templates/index.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Scott Frazier - p5</title>
-        <script src="p5.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <title>Scott Frazier - Home</title>
+        <link rel="stylesheet" href="/Web/visuals/style.css">
         <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
     </head>
     <body>
@@ -27,11 +26,11 @@
             </div>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
-        <br>
-
-        <div id="myCanvas2">
-        <script src="sketch.js"></script>
-
-        </div>
+        <h2 id="h2welcome">Welcome!</h2><img id="sfpic" src="/Web/Resources/cropped.png">
+        <p>This webpage was created to showcase the many tools that I have learned over the years relating to data science. Please feel free to browse around and enjoy the webpage! Thank you for visiting!</p>
+        <hr id="hr1">
+        <p>The experience tab is where you may view some of the tools I have been using over the years, as well as what I feel my proficiency is in each tool, and how long I have been using them!</p>
+        <p>The about tab is where you may read a bit about me, as well as links to my social media pages!</p>
+       
     </body>
 </html>
