adding more animations

--- a/SMU_Vizz_Portfolio/Web/templates/about.html
+++ b/SMU_Vizz_Portfolio/Web/templates/about.html
@@ -36,7 +36,7 @@
         <br>
         <hr id="hr1">
         <div id="logos">
-            <a href="https://www.facebook.com/scott.frazier.545/" target="_blank"><img class="about-pics" src="/Web/Resources/iconmonstr-facebook-6.svg" alt="Facebook profile link"></a>
+            <a href="https://www.facebook.com/scott.frazier.545/" target="_blank"><img class="about-pics" src="/Web/Resources/facebook.svg" alt="Facebook profile link"></a>
             <a href="https://www.linkedin.com/in/scott-frazier-7812031a1/" target="_blank"><img class="about-pics" src="/Web/Resources/linkedin.svg" alt="Linkedin profile link"></a>
             <a href="https://github.com/scottfrazier97" target="_blank"><img class="about-pics" src="/Web/Resources/iconmonstr-github-3.svg" alt="Github profile link"></a>
             <span class="stretch"></span>
