--- a/SMU_Vizz_Portfolio/Web/visuals/style.css
+++ b/SMU_Vizz_Portfolio/Web/visuals/style.css
@@ -48,6 +48,7 @@ p{
     text-decoration: none;
 }
 
+
 #ul-a:hover{
     display: block;
     color: black;
@@ -100,6 +101,8 @@ p{
     text-decoration: none;
     display: block;
     text-align: left;
+    transition: all .35s ease-in-out;
+
 }
 
 .dropdown-content a:hover {
@@ -146,21 +149,15 @@ th {
 }
 
 #logos{   
-    /* width: 200px;
-    height: 200px; */
-    margin-top: 60px;
-    margin-left: auto; 
-    margin-right: auto;
+    margin-top: 30px;
+    margin-left: 30px; 
+    margin-right: 30px;
     text-align: justify;
-    -ms-text-justify: distribute-all-lines;
-    text-justify: distribute-all-lines;
 }
 
 #logos a {
     vertical-align: top;
     display: inline-block;
-    *display: inline;
-    zoom: 1;
 }
 
 .stretch {
@@ -173,6 +170,16 @@ th {
 .about-pics{
     width: 200px;
     height: 200px;
+    transition: all .35s ease-in-out;
+    border-radius: 52px;
+
+}
+
+.about-pics:hover{
+    transform: scale(1.2);
+    transition: all .35s ease-in-out;
+    box-shadow: 3px 3px 5px #333;
+
 }
 
 #hr1{
