--- a/SMU_Vizz_Portfolio/Web/visuals/style.css
+++ b/SMU_Vizz_Portfolio/Web/visuals/style.css
@@ -178,7 +178,7 @@ th {
 .about-pics:hover{
     transform: scale(1.2);
     transition: all .35s ease-in-out;
-    box-shadow: 3px 3px 5px #333;
+    box-shadow: 3px 3px 5px rgb(0, 0, 0);
 
 }
 
