adding active navbar indicator

--- a/SMU_Vizz_Portfolio/Web/templates/D3Vizz.html
+++ b/SMU_Vizz_Portfolio/Web/templates/D3Vizz.html
@@ -14,7 +14,7 @@
             <li id="nav-next"><a id = "ul-a" href="P5.html">p5</a></li>
             <li id="nav-next"><a id = "ul-a" href="JS.html">JavaScript</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3.html">D3</a></li>
-            <li id="nav-next"><a id = "ul-a" href="D3Vizz.html">D3Visuals</a></li>
+            <li id="nav-next"><a id = "ul-a" href="D3Vizz.html" class="active">D3Visuals</a></li>
             <div class="dropdown">
                 <button class="dropbtn">Tableau
                     <i class="fa fa-caret-down"></i>
