--- a/SMU_Vizz_Portfolio/Web/templates/JS.html
+++ b/SMU_Vizz_Portfolio/Web/templates/JS.html
@@ -11,7 +11,7 @@
             <li id="nav-next"><a id = "ul-a" href="index.html">Home</a></li>
             <li id="nav-next"><a id = "ul-a" href="experience.html">Experience</a></li>
             <li id="nav-next"><a id = "ul-a" href="P5.html">p5</a></li>
-            <li id="nav-next"><a id = "ul-a" href="JS.html">JavaScript</a></li>
+            <li id="nav-next"><a id = "ul-a" href="JS.html" class="active">JavaScript</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3.html">D3</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3Vizz.html">D3Visuals</a></li>
             <div class="dropdown">
