--- a/SMU_Vizz_Portfolio/Web/templates/tableau.html
+++ b/SMU_Vizz_Portfolio/Web/templates/tableau.html
@@ -15,7 +15,7 @@
             <li id="nav-next"><a id = "ul-a" href="D3.html">D3</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3Vizz.html">D3Visuals</a></li>
                 <div class="dropdown">
-                    <button class="dropbtn">Tableau
+                    <button class="dropbtn" id="tableauactive">Tableau
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
