--- a/SMU_Vizz_Portfolio/Web/templates/about.html
+++ b/SMU_Vizz_Portfolio/Web/templates/about.html
@@ -24,7 +24,7 @@
                 <a href="extras.html">Extras</a>
                 </div>
             </div>
-            <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
+            <li id="nav-next"><a id = "ul-a" href="about.html" class="active">About</a></li>
         </ul>
         <br>
         <h2 id="h2exp">This page is to tell you a little bit more about me. Feel free to check out my social media pages!</h2>
