--- a/SMU_Vizz_Portfolio/Web/templates/experience.html
+++ b/SMU_Vizz_Portfolio/Web/templates/experience.html
@@ -9,7 +9,7 @@
     <body>
         <ul id="ul-nav">
             <li id="nav-next"><a id = "ul-a" href="index.html">Home</a></li>
-            <li id="nav-next"><a id = "ul-a" href="experience.html">Experience</a></li>
+            <li id="nav-next"><a id = "ul-a" href="experience.html" class="active">Experience</a></li>
             <li id="nav-next"><a id = "ul-a" href="P5.html">p5</a></li>
             <li id="nav-next"><a id = "ul-a" href="JS.html">JavaScript</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3.html">D3</a></li>
