--- a/SMU_Vizz_Portfolio/Web/templates/index.html
+++ b/SMU_Vizz_Portfolio/Web/templates/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <ul id="ul-nav">
-            <li id="nav-next"><a id = "ul-a" href="index.html">Home</a></li>
+            <li id="nav-next"><a id = "ul-a" href="index.html" class="active">Home</a></li>
             <li id="nav-next"><a id = "ul-a" href="experience.html">Experience</a></li>
             <li id="nav-next"><a id = "ul-a" href="P5.html">p5</a></li>
             <li id="nav-next"><a id = "ul-a" href="JS.html">JavaScript</a></li>
