making a lot of edits

--- a/SMU_Vizz_Portfolio/Web/templates/about.html
+++ b/SMU_Vizz_Portfolio/Web/templates/about.html
@@ -30,9 +30,13 @@
         <h2 id="h2exp">This page is to tell you a little bit more about me. Feel free to check out my social media pages!</h2>
         <br>
         
-        <p id="about-info">Having graduated from the University of Texas at Dallas's Criminology program in May 2020, I have garnered many skills that revolve around the analysis, and manipulation of data. With the job market becoming very competitive after the COVID-19 outbreak, 
-            I decided it was time to acquire marketable skills to broaden my potential job opportunities. After doing some research, I decided to focus on an entirely new skill-set, which ultimately ended up being data science. 
-            In September of 2020, I enrolled in the Data Science Bootcamp at Southern Methodist University; where I learned how to gather, manipulate, and present large quantities of data. To accomplish this, I learned how to use a variety of different technologies that are used heavily in the data science industry today.</p>
+        <p id="about-info">• Having graduated from the University of Texas at Dallas's Criminology program in May 2020, I have garnered many skills that revolve around the analysis, and manipulation of data.</p>
+        <br>
+        <p id="about-info">• With the job market becoming very competitive after the COVID-19 outbreak, I decided it was time to acquire marketable skills to broaden my potential job opportunities. After doing some research, I decided to focus on an entirely new skill-set, which ultimately ended up being data science.</p> 
+        <br>
+        <p id="about-info">• In September of 2020, I enrolled in the Data Science Bootcamp at Southern Methodist University; where I learned how to gather, manipulate, and present large quantities of data. To accomplish this, I learned how to use a variety of different technologies that are used heavily in the data science industry today.</p>
+        <br>
+        <p id="about-info">• This brings me to today. I am now enrolled in a Data Science Masters program at Souther Methodist University (SMU), and will be finishing the program around May of 2023. Upon completion I hope to find a new job in which I can grow relating to my data science skillset.</p>
         <br>
         <hr id="hr1">
         <div id="logos">
