--- a/SMU_Vizz_Portfolio/Web/visuals/style.css
+++ b/SMU_Vizz_Portfolio/Web/visuals/style.css
@@ -209,8 +209,12 @@ th {
 }
 
 #myCanvas {
-    padding: 70px 0;
-    text-align: center;    
+    position: absolute;
+    top: 30px;;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin:auto;    
 }
 
 #svgsm{
