--- a/SMU_Vizz_Portfolio/Web/templates/experience.html
+++ b/SMU_Vizz_Portfolio/Web/templates/experience.html
@@ -32,9 +32,9 @@
             <thead>
                 <tr>
                     <th><b>Technology/ Concept:</b></th>
-                    <th>Python *</th>
-                    <th>SQL *</th>
-                    <th>JavaScript *</th>
+                    <th>Python</th>
+                    <th>SQL</th>
+                    <th>JavaScript</th>
                     <th>Pandas</th>
                     <th>Matplotlib</th>
                     <th>HTML/ CSS</th>
