Adding back the JS styling

--- a/SMU_Vizz_Portfolio/Web/templates/index.html
+++ b/SMU_Vizz_Portfolio/Web/templates/index.html
@@ -27,8 +27,9 @@
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <h1 id="h1welcome">Welcome!</h1><img id="sfpic" src="/Web/Resources/cropped.png">
-        <p>This webpage was created to showcase the many tools that I have learned over the years relating to data science. Please feel free to browse around and enjoy the webpage! Thank you for visiting!</p>
+        <p style="text-align: center;">This webpage was created to showcase the many tools that I have learned over the years relating to data science. Please feel free to browse around and enjoy the webpage! Thank you for visiting!</p>
         <hr id="hr1">
+        <h2 id="h2toc">Table of Contents</h2>
         <p>The <a class="pageLinks" href="experience.html">Experience</a> tab is where you may view some of the tools I have been using over the years, as well as what I feel my proficiency is in each tool, and how long I have been using them.</p>
         <p>The <a class="pageLinks" href="P5.html">p5</a> tab contains an animated visualization in which I have four moving lines and they all will reverse directions once the boundaries of the container have been reached.</p>
         <p>The <a class="pageLinks" href="JS.html">JavaScript</a> tab contains an interactive visualization which will rotate according the user's mouse position.</p>
