--- a/SMU_Vizz_Portfolio/Web/templates/about.html
+++ b/SMU_Vizz_Portfolio/Web/templates/about.html
@@ -36,7 +36,7 @@
         <br>
         <p id="about-info">• In September of 2020, I enrolled in the Data Science Bootcamp at Southern Methodist University; where I learned how to gather, manipulate, and present large quantities of data. To accomplish this, I learned how to use a variety of different technologies that are used heavily in the data science industry today.</p>
         <br>
-        <p id="about-info">• This brings me to today. I am now enrolled in a Data Science Masters program at Souther Methodist University (SMU), and will be finishing the program around May of 2023. Upon completion I hope to find a new job in which I can grow relating to my data science skillset.</p>
+        <p id="about-info">• This brings me to today. I am now enrolled in a Data Science Masters program at Southern Methodist University (SMU), and will be finishing the program around May of 2023. Upon completion I hope to find a new job in which I can grow relating to my data science skillset.</p>
         <br>
         <hr id="hr1">
         <div id="logos">
