fixing file paths in personal webpage

--- a/SMU_Vizz_Portfolio/Web/templates/D3.html
+++ b/SMU_Vizz_Portfolio/Web/templates/D3.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - D3</title>
-        <link rel="stylesheet" href="/Web/visuals/style.css">
+        <link rel="stylesheet" href="/visuals/style.css">
         <script src="https://d3js.org/d3.v7.min.js"></script>
-        <script src="/Web/js/app.js" defer></script>
-        <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
+        <script src="/js/app.js" defer></script>
+        <link rel="icon" type="image/x-icon" href="/Resources/favicon.ico">
     </head>
     <body>
         <ul id="ul-nav">
