--- a/SMU_Vizz_Portfolio/Web/templates/D3Vizz.html
+++ b/SMU_Vizz_Portfolio/Web/templates/D3Vizz.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - D3Visuals</title>
-        <link rel="stylesheet" href="/Web/visuals/style.css">
+        <link rel="stylesheet" href="/visuals/style.css">
         <script src="https://d3js.org/d3.v7.min.js"></script>
-        <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/Resources/favicon.ico">
     </head>
     <body>
         <ul id="ul-nav">
@@ -35,7 +35,7 @@
             <style>.rectangle:hover{opacity: 0.66}</style>
             <svg id="svgbar"></svg>
         </div>
-        <script src="/Web/js/app2.js"></script>
+        <script src="/js/app2.js"></script>
         <br>
         <hr id="hr1">
         <br>
@@ -43,7 +43,7 @@
             <p style="text-align: center; padding-top: 10px; font-size: 26px;">Financial Gross (SUM) by Genre</p>
             <svg id="svgpie" width="1000" height="500"></svg>
         </div>
-        <script src="/Web/js/app3.js"></script>
+        <script src="/js/app3.js"></script>
 
        
     </body>
