--- a/SMU_Vizz_Portfolio/Web/templates/JS.html
+++ b/SMU_Vizz_Portfolio/Web/templates/JS.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - JS</title>
-        <link rel="stylesheet" href="/Web/visuals/style.css">
-        <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
+        <link rel="stylesheet" href="/visuals/style.css">
+        <link rel="icon" type="image/x-icon" href="/Resources/favicon.ico">
     </head>
     <body>
         <ul id="ul-nav">
@@ -27,6 +27,6 @@
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <canvas id="myCanvas" width="1220" height="1220"></canvas>
-        <script src="/Web/js/script.js"></script>
+        <script src="/js/script.js"></script>
     </body>
 </html>
