--- a/SMU_Vizz_Portfolio/Web/templates/P5.html
+++ b/SMU_Vizz_Portfolio/Web/templates/P5.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - p5</title>
-        <script src="/Web/js/p5.js"></script>
-        <link rel="stylesheet" href="/Web/visuals/style.css">
-        <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
+        <script src="/js/p5.js"></script>
+        <link rel="stylesheet" href="/visuals/style.css">
+        <link rel="icon" type="image/x-icon" href="/Resources/favicon.ico">
     </head>
     <body>
         <ul id="ul-nav">
@@ -30,7 +30,7 @@
         <br>
 
         <div id="myCanvas2">
-        <script src="/Web/js/sketch.js"></script>
+        <script src="/js/sketch.js"></script>
 
         </div>
     </body>
