--- a/SMU_Vizz_Portfolio/Web/templates/about.html
+++ b/SMU_Vizz_Portfolio/Web/templates/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - About</title>
-        <link rel="stylesheet" href="/Web/visuals/style.css">
-        <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
+        <link rel="stylesheet" href="/visuals/style.css">
+        <link rel="icon" type="image/x-icon" href="/Resources/favicon.ico">
     </head>
     <body>
         <ul id="ul-nav">
@@ -40,9 +40,9 @@
         <br>
         <hr id="hr1">
         <div id="logos">
-            <a href="https://www.facebook.com/scott.frazier.545/" target="_blank"><img class="about-pics" src="/Web/Resources/facebook.svg" alt="Facebook profile link"></a>
-            <a href="https://www.linkedin.com/in/scott-frazier-7812031a1/" target="_blank"><img class="about-pics" src="/Web/Resources/linkedin.svg" alt="Linkedin profile link"></a>
-            <a href="https://github.com/scottfrazier97" target="_blank"><img class="about-pics" src="/Web/Resources/iconmonstr-github-3.svg" alt="Github profile link"></a>
+            <a href="https://www.facebook.com/scott.frazier.545/" target="_blank"><img class="about-pics" src="/Resources/facebook.svg" alt="Facebook profile link"></a>
+            <a href="https://www.linkedin.com/in/scott-frazier-7812031a1/" target="_blank"><img class="about-pics" src="/Resources/linkedin.svg" alt="Linkedin profile link"></a>
+            <a href="https://github.com/scottfrazier97" target="_blank"><img class="about-pics" src="/Resources/iconmonstr-github-3.svg" alt="Github profile link"></a>
             <span class="stretch"></span>
         </div>
     </body>
