--- a/SMU_Vizz_Portfolio/Web/templates/tableau.html
+++ b/SMU_Vizz_Portfolio/Web/templates/tableau.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - Tableau</title>
-        <link rel="stylesheet" href="/Web/visuals/style.css">
-        <link rel="icon" type="image/x-icon" href="Resources/favicon.ico">
+        <link rel="stylesheet" href="/visuals/style.css">
+        <link rel="icon" type="image/x-icon" href="/Resources/favicon.ico">
     </head>
     <body>
         <ul id="ul-nav">
