Adding parallax to personal web

--- a/SMU_Vizz_Portfolio/Web/templates/JS.html
+++ b/SMU_Vizz_Portfolio/Web/templates/JS.html
@@ -24,6 +24,7 @@
                 <a href="extras.html">Extras</a>
                 </div>
             </div>
+            <li id="nav-next"><a id = "ul-a" href="parallax.html">Parallax</a></li>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <canvas id="myCanvas" width="1220" height="1220"></canvas>
