--- a/SMU_Vizz_Portfolio/Web/templates/D3Vizz.html
+++ b/SMU_Vizz_Portfolio/Web/templates/D3Vizz.html
@@ -25,6 +25,7 @@
                 <a href="extras.html">Extras</a>
                 </div>
             </div>
+            <li id="nav-next"><a id = "ul-a" href="parallax.html">Parallax</a></li>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <h2 class="h2d3"></h2>
