--- a/SMU_Vizz_Portfolio/Web/templates/experience.html
+++ b/SMU_Vizz_Portfolio/Web/templates/experience.html
@@ -23,7 +23,9 @@
                 <a href="tabdash.html">Dashboard</a>
                 <a href="extras.html">Extras</a>
                 </div>
-            </div>            <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
+            </div>
+            <li id="nav-next"><a id = "ul-a" href="parallax.html">Parallax</a></li>
+            <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <h2 id="h2exp">Here is a table showing some of the many tools that I have used throughout the last two years!</h2>
         <hr id="hr1">
