--- a/SMU_Vizz_Portfolio/Web/templates/extras.html
+++ b/SMU_Vizz_Portfolio/Web/templates/extras.html
@@ -24,6 +24,7 @@
                 <a href="extras.html">Extras</a>
                 </div>
             </div>
+            <li id="nav-next"><a id = "ul-a" href="parallax.html">Parallax</a></li>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <h1 class="h2d3" style="text-align: center;"><u>Extra Tableau Graphs</u></h1>
