--- a/SMU_Vizz_Portfolio/Web/visuals/style.css
+++ b/SMU_Vizz_Portfolio/Web/visuals/style.css
@@ -149,11 +149,15 @@ table {
     width: 100%;
     border-collapse: separate;
     padding: 0;
+    border-radius: 8px;
+
 }
   
 th, td {
     text-align: left;
     padding: 5px;
+    border-radius: 8px;
+
 }
   
 tr:nth-child(even){background-color: #f2f2f2}
